--- a/css/main.css
+++ b/css/main.css
@@ -81,81 +81,33 @@ select {
 
 /* ---------------------Mobile Style-------------------------*/
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: .9em;
   background: linear-gradient(to bottom, rgba(217, 0, 255, 0.085), #66CCFF);
-  */
+  margin: 0;
+  height: 100%;
+  display: grid;
+  place-items: center;
 }
 
-.content-wrapper {
-  outline: 3px red solid;
-  width: 90%;
-  max-width: 1200px;
+.container {
+  display: grid;
+  grid-template-columns: repeat(20, 20px);
+  grid-template-rows: repeat(20, 20px);
+  gap: 2px;
+  justify-content: center;
+  align-content: center;
+  background-color: #ccc;
+}
+
+.container div {
   display: flex;
-  flex-flow: column nowrap;
+  justify-content: center;
   align-items: center;
+  background-color: white;
+  border: 1px solid black;
+  font-size: 12px;
+  width: 20px;
+  height: 20px;
 }
-
-.header-text {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.header-controls {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-}
-
-.timer {
-  padding: 10px;
-}
-
-header h1 {
-  margin: 0;
-  padding-top: 40px;
-  width: 100%;
-  font-size: 1.5em;
-}
-
-header h2 {
-  font-size: 1em;
-  font-style: italic;
-  border-bottom: 3px solid black;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-header nav {
-  padding: 10px 0;
-  border-bottom: 3px solid black;
-  text-align: right;
-}
-
-header nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-}
-
-header nav ul li {
-  width: 100%;
-  font-size: .875em;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-/* 
-.clue-container {
-  outline: 3px blue dotted;
-}
-
-.grid-container {
-  outline: 3px white solid;
-} */
 
 /* ---------------------Desktop Styles-------------------------*/
 @media only screen and (min-width: 768px) {}
